# html-scrape-blocks

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/model/: mod.rs  query_matcher.rs  scrape_block.rs  scrape_block_error.rs
src/util/: kuchiki_elements.rs  mod.rs
tests/: tests.rs
tests/fragments/: test.html
