[package]
name = "html-scrape-blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

itertools = "0.11"

regex = "1"

kuchiki = { git = "https://github.com/hubble459/kuchiki-pseudos.git" }
