[package]
name = "kuchiki-scrape-blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuchiki = { git = "https://github.com/hubble459/kuchiki-pseudos.git" }
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.11"
regex = "1"
thiserror = "1"
strum = { version = "0", features = ["derive"] }
chrono = { version = "0.4", optional = true }
time = { version = "0.3", optional = true, features = ["parsing"] }
reqwest = "0.11"

[dev-dependencies]
env_logger = "0"

[features]
chrono = ["dep:chrono"]
time = ["dep:time"]
